<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/page_title_msg"
            android:layout_width="310dp"
            android:layout_height="41dp"
            android:id="@+id/weightTitle"
            android:layout_marginTop="108dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            android:textSize="18sp"
            android:textStyle="bold" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044" android:gravity="center"/>
    <EditText
            android:layout_width="262dp"
            android:layout_height="44dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/enterWeightId"
            android:hint="@string/hint_enter_weight" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginStart="72dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/checkVenus"/>
    <Button
            android:text="@string/btn_show_weight"
            android:layout_width="211dp"
            android:layout_height="45dp"
            android:id="@+id/btnShowWeight" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/enterWeightId" android:background="#2196F3"
            android:textColor="#FFFFFF" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvResultWeight" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/btnShowWeight" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="18sp" android:textStyle="bold" android:gravity="center"/>
    <CheckBox
            android:text="@string/planet_mars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkMars" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/weightTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="84dp"/>
    <CheckBox
            android:text="@string/planet_venus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkVenus" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/weightTitle" app:layout_constraintStart_toEndOf="@+id/checkMars"
            android:layout_marginStart="20dp"/>
    <CheckBox
            android:text="@string/planet_jupiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkJupiter" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/weightTitle" app:layout_constraintStart_toEndOf="@+id/checkVenus"
            android:layout_marginStart="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>